--- a/rpg-game-vanilla/pages/playerCreation.css
+++ b/rpg-game-vanilla/pages/playerCreation.css
@@ -54,6 +54,8 @@ button {
 
 section#playerImage {
     height: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
@@ -64,4 +66,9 @@ footer {
     color: blanchedalmond;
     background-color: green;
     height: 20%;
+}
+
+#btns {
+    display: flex;
+    justify-content: space-around;
 }
