added lnk to combat page

--- a/rpg-game-vanilla/pages/location/location.css
+++ b/rpg-game-vanilla/pages/location/location.css
@@ -35,3 +35,10 @@ main {
 img {
     margin: auto;
 }
+
+h1#pageTitle {
+    font-size: 10vh;
+    margin: auto;
+    text-align: center;
+    color: darkred;
+}
