--- a/rpg-game-vanilla/style.css
+++ b/rpg-game-vanilla/style.css
@@ -21,7 +21,9 @@ section {
   flex-direction: column;
   justify-content: center;
   gap: 5rem;
-  background-color: green;
+  width: 80%;
+  height: 50%;
+  background-color: rgb(248, 61, 15);
 }
 
 #status {
@@ -31,5 +33,12 @@ section {
 }
 
 h1 {
+  margin: auto;
+  font-size: 5vh;
+}
+
+#btn {
+  font-size: 5vh;
+  width: 50%;
   margin: auto;
 }
