--- a/rpg-game-vanilla/pages/combat/combat.css
+++ b/rpg-game-vanilla/pages/combat/combat.css
@@ -24,13 +24,13 @@ header {
 }
 
 main {
-    width: 80%;
-    height: 80%;
+    width: 60%;
+    height: 60%;
     background-color: yellow;
     display: grid;
     gap: 1rem;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3fr 1fr;
+    grid-template-rows: 2fr 1fr;
     grid-template-areas:
         "monsterImg playerImg"
         "buttons stats"
@@ -73,7 +73,8 @@ button {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
     font-size: 5vh;
 }
 
