--- a/rpg-game-vanilla/pages/combat/combat.css
+++ b/rpg-game-vanilla/pages/combat/combat.css
@@ -6,6 +6,10 @@
 html, body {
     height: 100%;
     width: 100%;
+
+}
+
+body {
     background-image: url('/assets/combat/desert.png');
     background-size: cover;
     display: flex;
@@ -15,17 +19,17 @@ html, body {
 }
 
 header {
-    margin-bottom: 4rem;
     color: rgb(141, 0, 0);
     font-size: 5vh;
+    background-color: red;
+    height: 20%;
 }
 
 main {
     width: 60%;
-    height: 100%;
+    height: 60%;
     background-color: yellow;
     display: grid;
-    gap: 1rem;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 2fr 1fr;
     grid-template-areas:
@@ -35,47 +39,30 @@ main {
 }
 
 #log {
-    grid-area: monsterImg;
     background-color: red;
-    width: 100%;
-    height: 100%;
 }
 
 #monsterImage {
     grid-area: monsterImg;
     background-color: red;
-    width: 100%;
-    height: 100%;
 }
 
 #playerImage {
     grid-area: playerImg;
     background-color: green;
-    width: 100%;
-    height: 100%;
 }
 
 #buttons {
     grid-area: buttons;
     background-color: blue;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 2rem;
-}
-
-button {
-    height: 100%;
-    font-size: 5vh;
 }
 
 #stats {
     grid-area: stats;
     background-color: purple;
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
